--- a/src/app/pages/character-selection/character-selection.component.html
+++ b/src/app/pages/character-selection/character-selection.component.html
@@ -15,7 +15,7 @@
     <div class="card-container">
         <div *ngFor="let character of characters" class="characterGroup">
             <img [src]="images[character.id]" width="200" center alt="name">
-            <button class="card card-small" (click)="selection.value = 'component'" tabindex="0">
+            <button class="card card-small" (click)="getCharacterN(character.id)">
                 <span>{{character.nameGroup}}</span>
             </button>
         </div>
@@ -33,9 +33,9 @@
                 <h3>Equipment:</h3>
             </div>
             <div class="column2">
-                <h3>Race 01</h3>
-                <h3>Profession 01</h3>
-                <h3>Equipment 01</h3>
+                <h3>{{race}}</h3>
+                <h3>{{profession}}</h3>
+                <h3>{{equipment}}</h3>
             </div>
         </div>
         <div class="detail">
@@ -48,12 +48,12 @@
                 <h3>Constitution:</h3>
             </div>
             <div class="colum2">
-                <h3>2</h3>
-                <h3>5</h3>
-                <h3>4</h3>
-                <h3>5</h3>
-                <h3>4</h3>
-                <h3>5</h3>
+                <h3>{{strength}}</h3>
+                <h3>{{intelligence}}</h3>
+                <h3>{{dexterty}}</h3>
+                <h3>{{charisma}}</h3>
+                <h3>{{wisdom}}</h3>
+                <h3>{{constitution}}</h3>
             </div>
         </div>
     </div>
