--- a/src/app/pages/name-selection/name-selection.component.html
+++ b/src/app/pages/name-selection/name-selection.component.html
@@ -1,2 +1,22 @@
-<p>name-selection works!</p>
+
+<div class="content">
+    <div class="box1">
+        <img src= "{{imageText}}" width="824px">
+        <input type="text" id="fname" name="fname">
+        <button id="btn"><img src= "{{imageButton}}" width="265px"> </button>
+        
+    </div>
+    
+    <div class="box2">
+        <img src= "{{imageA}}" width="824px">
+    
+    </div>
+
+</div>
+
+
+
+
+
+
 <router-outlet></router-outlet>
