HU-10 Se agrega funcionalidad

--- a/src/app/pages/character-selection/character-selection.component.html
+++ b/src/app/pages/character-selection/character-selection.component.html
@@ -59,7 +59,7 @@
 </fieldset>
 <input type="hidden" #selection>
 <div class="buttonG">
-    <button mat-button class="next" (click)="next()">NEXT</button>
+    <button mat-button type="buttom" class="next" routerLink="name-selection/{{idCharacterSelected}}">NEXT</button>
 </div>
 
 
