--- a/src/app/pages/name-selection/name-selection.component.html
+++ b/src/app/pages/name-selection/name-selection.component.html
@@ -1,13 +1,12 @@
-
 <div class="content">
     <div class="box1">
-        <img src= "{{imageText}}" width="824px">
-        <input  type="text" [(ngModel)]="userReq!.username" id="fname" name="fname">
-        <button type="button" class="style-button" (click)="sendUserReq();"> Start</button>
+        <img src="{{imageText}}" width="824px">
+        <input type="text" [(ngModel)]="userReq!.username" id="fname" name="fname">
+        <button id="btn" (click)="sendUserReq();"><img src="{{imageButton}}" width="265px"> </button>
     </div>
-    
+
     <div class="box2">
-        <img src= "{{imageA}}" width="824px">
+        <img src="{{imageA}}" width="824px">
     </div>
 
 
