--- a/src/app/pages/roleplay-game/roleplay-game.component.html
+++ b/src/app/pages/roleplay-game/roleplay-game.component.html
@@ -1,2 +1,9 @@
-<p>roleplay-game works!</p>
+<div class="content">
+    <div class="box1">
+        <h1>ADVENTURE GENERATION</h1>
+    </div>
+    <div class="box2">
+        <h3>{{output_text}}</h3>
+    </div>
+</div>
 <router-outlet></router-outlet>
