generacion de contexto inicial en roleplay game

--- a/src/app/pages/roleplay-game/roleplay-game.component.css
+++ b/src/app/pages/roleplay-game/roleplay-game.component.css
@@ -27,6 +27,12 @@
     align-items: center;
 }
 
+.box22 {
+    display: flex;
+    align-items: center;
+    padding-left: 180px;
+}
+
 input {
     width: 490px;
     height: 60px;
