Stadisticas de raza en seleccion de personajes

--- a/src/app/pages/character-selection/character-selection.component.html
+++ b/src/app/pages/character-selection/character-selection.component.html
@@ -59,7 +59,8 @@
 </fieldset>
 <input type="hidden" #selection>
 <div class="buttonG">
-    <button mat-button type="buttom" class="next" routerLink="name-selection/{{idCharacterSelected}}">NEXT</button>
+    <button mat-button type="buttom" class="next" routerLink="name-selection/{{idCharacterSelected}}"
+        (click)="postStatisticsContinuar()">NEXT</button>
 </div>
 
 
