--- a/src/app/pages/character-selection/character-selection.component.html
+++ b/src/app/pages/character-selection/character-selection.component.html
@@ -14,7 +14,7 @@
         <div *ngFor="let character of characters" class="characterGroup">
             <img [src]="images[character.id]" width="200" center alt="name">
             <button class="card card-small" (click)="getCharacterN(character.id)">
-                <span>{{character.nameGroup}}</span>
+                <span>{{character.characterName}}</span>
             </button>
         </div>
     </div>
