--- a/src/app/pages/roleplay-game/roleplay-game.component.css
+++ b/src/app/pages/roleplay-game/roleplay-game.component.css
@@ -6,11 +6,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    /*display: flex;*/
     flex-direction: row;
     align-content: center;
     gap: 30px;
-
+    background-color: black;
+    /*padding-bottom: 100px;*/
 }
 
 .box1 {
@@ -25,12 +26,18 @@
 .box2 {
     display: flex;
     align-items: center;
+
 }
 
 .box22 {
     display: flex;
     align-items: center;
-    padding-left: 180px;
+    margin: auto;
+}
+
+img {
+    margin: auto;
+    width: 5%
 }
 
 input {
@@ -78,9 +85,31 @@ input {
 }
 
 h3 {
-    color: white;
+    color: white !important;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: justify;
 }
 
 h1 {
     color: white;
+}
+
+.story {
+    margin: 80px;
+    border-radius: 50px;
+    border: solid;
+    border-color: transparent;
+    background-color: rgba(7, 7, 8, 0.6);
+
+}
+
+.roleplay {
+    background: url(src\assets\roleplaybackground.jpg);
+    margin: 50px;
+    height: 600px;
+    margin-top: 5px;
+    border-radius: 50px;
+    border: solid;
+    border-color: transparent;
 }
