--- a/src/app/pages/roleplay-game/roleplay-game.component.html
+++ b/src/app/pages/roleplay-game/roleplay-game.component.html
@@ -12,6 +12,13 @@
                 <h3>{{output_text}}</h3>
             </div>
         </fieldset>
+        <fieldset class="prompt">
+            <mat-form-field appearance="fill">
+                <mat-label>Input</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </fieldset>
+
     </fieldset>
 
 
