--- a/src/app/pages/roleplay-game/roleplay-game.component.css
+++ b/src/app/pages/roleplay-game/roleplay-game.component.css
@@ -113,3 +113,26 @@ h1 {
     border: solid;
     border-color: transparent;
 }
+
+mat-form-field-infix {
+    width: -180px !important;
+}
+
+.mat-form-field-infix {
+    width: -180px !important;
+}
+
+.mat-form-field {
+    display: block !important;
+    text-align: center;
+}
+
+.prompt {
+    text-align: center;
+    border-color: transparent;
+}
+
+input {
+    border-color: black;
+    border-width: 3px;
+}
