--- a/src/app/pages/character-selection/character-selection.component.html
+++ b/src/app/pages/character-selection/character-selection.component.html
@@ -26,7 +26,7 @@
     <div class="detail">
         <div class="detail">
             <div class="column">
-                <h3>Race:</h3>
+                <h3>Ethnicity:</h3>
                 <h3>Profession:</h3>
                 <h3>Equipment:</h3>
             </div>
