--- a/src/app/pages/name-selection/name-selection.component.html
+++ b/src/app/pages/name-selection/name-selection.component.html
@@ -1,8 +1,8 @@
 <div class="content">
     <div class="box1">
         <img src="{{imageText}}" width="824px">
-        <input type="text" [(ngModel)]="userReq!.username" id="fname" name="fname">
-        <button id="btn" (click)="sendUserReq();" routerLink="roleplay-game"><img src="{{imageButton}}" width="265px">
+        <input type="text" [(ngModel)]="characterReq!.characterName" id="fname" name="fname">
+        <button id="btn" (click)="sendCharacter();" routerLink="roleplay-game"><img src="{{imageButton}}" width="265px">
         </button>
     </div>
 
