--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,7 +11,8 @@
         <mat-label>Password</mat-label>
         <input matInput placeholder="Password" name="password" [(ngModel)]="credenciales.password" type="password" required>
       </mat-form-field>
-      <button mat-raised-button type="submit" (click)="login()">Login</button>
+      
+      <button mat-raised-button type="submit" (click)="isRegisterPage ? register() : login()">{{ isRegisterPage ? 'Register' : 'Login' }}</button>
     </form>
   </div>
 </div>
