--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,16 +3,19 @@
   <div class="mat-card">
     <form class="mat-form">
 
-      <mat-form-field class="custom-input">
+      <mat-form-field autocomplete="off" class="custom-input">
         <mat-label>Username</mat-label>
-        <input matInput placeholder="Username" name="username" [(ngModel)]="credenciales.username" required>
+        <input autocomplete="off" matInput placeholder="Username" name="username" [(ngModel)]="credenciales.username"
+          required>
       </mat-form-field>
       <mat-form-field class="custom-input">
         <mat-label>Password</mat-label>
-        <input matInput placeholder="Password" name="password" [(ngModel)]="credenciales.password" type="password" required>
+        <input class="inp2" matInput placeholder="Password" name="password" [(ngModel)]="credenciales.password"
+          type="password" required>
       </mat-form-field>
-      
-      <button mat-raised-button type="submit" (click)="isRegisterPage ? register() : login()">{{ isRegisterPage ? 'Register' : 'Login' }}</button>
+
+      <button mat-raised-button type="submit" (click)="isRegisterPage ? register() : login()">{{ isRegisterPage ?
+        'Register' : 'Login' }}</button>
     </form>
   </div>
 </div>
