--- a/src/app/pages/roleplay-game/dialog.component.html
+++ b/src/app/pages/roleplay-game/dialog.component.html
@@ -1,6 +1,11 @@
 <h1 mat-dialog-title>Estadísticas </h1>
 <div mat-dialog-content>
-  <p>asdasd</p>
+  <p>Carisma: {{statistics.charisma}}</p>
+  <p>Consitución: {{data.constitucion}}</p>
+  <p>Destreza: {{data.dexterity}}</p>
+  <p>Inteligencia: {{data.intelligence}}</p>
+  <p>Fuerza: {{data.strength}}</p>
+  <p>Sabiduría: {{data.wisdom}}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cerrar</button>
