--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,15 @@ html {
 .cdk-global-overlay-wrapper {
     background-color: black;
 }
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: transparent;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::before {
+    border-bottom-color: transparent;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple {
+    border-bottom-color: transparent;
+}
