--- a/src/app/pages/character-selection/character-selection.component.html
+++ b/src/app/pages/character-selection/character-selection.component.html
@@ -47,11 +47,21 @@
                 <h3>Ethnicity:</h3>
                 <h3>Profession:</h3>
                 <h3>Equipment:</h3>
+                <h3>Health:</h3>
+                <h3>Armor:</h3>
             </div>
             <div class="column2">
                 <h3>{{race}}</h3>
                 <h3>{{profession}}</h3>
                 <h3>{{equipment}}</h3>
+                <h3 *ngIf="idCharacterSelected==1">250</h3>
+                <h3 *ngIf="idCharacterSelected==2">300</h3>
+                <h3 *ngIf="idCharacterSelected==3">250</h3>
+                <h3 *ngIf="idCharacterSelected==4">300</h3>
+                <h3 *ngIf="idCharacterSelected==1">Light</h3>
+                <h3 *ngIf="idCharacterSelected==2">Medium</h3>
+                <h3 *ngIf="idCharacterSelected==3">Heavy</h3>
+                <h3 *ngIf="idCharacterSelected==4">Medium</h3>
             </div>
         </div>
         <div class="detail">
