fix diseño popup

--- a/src/app/pages/roleplay-game/dialog.component.html
+++ b/src/app/pages/roleplay-game/dialog.component.html
@@ -17,4 +17,9 @@
   .custom-dialog-container .mat-dialog-container {
     text-align: -webkit-center;
   }
+
+  p {
+    font-weight: bold;
+    margin: 10px;
+  }
 </style>
