--- a/src/app/pages/roleplay-game/roleplay-game.component.css
+++ b/src/app/pages/roleplay-game/roleplay-game.component.css
@@ -46,7 +46,7 @@ img {
 
 input {
     width: 490px;
-    height: 60px;
+    height: 60px !important;
     border-radius: 20px;
     font-size: 25px;
 
