--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,7 @@ html {
 .mat-mdc-dialog-actions.mdc-dialog__actions {
     justify-content: center;
 }
+
+.mat-mdc-dialog-container .mdc-dialog__content {
+    margin-top: 20px;
+}
