--- a/src/app/pages/roleplay-game/roleplay-game.component.css
+++ b/src/app/pages/roleplay-game/roleplay-game.component.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100%;
     /*display: flex;*/
+    min-width: 750px;
     flex-direction: row;
     align-content: center;
     gap: 30px;
