--- a/src/app/pages/roleplay-game/roleplay-game.component.html
+++ b/src/app/pages/roleplay-game/roleplay-game.component.html
@@ -19,19 +19,19 @@
                 </div>
                 <div *ngIf="loading" class="opts">
                     <button mat-button class="op" *ngIf="options[0]"
-                        onclick="opcionClick(options[0])">{{options[0]}}</button>
+                        onclick="opcionClick(options[0])">•{{options[0]}}</button>
                 </div>
                 <div *ngIf="loading" class="opts">
                     <button mat-button class="op" *ngIf="options[1]"
-                        onclick="opcionClick(options[1])">{{options[1]}}</button>
+                        onclick="opcionClick(options[1])">•{{options[1]}}</button>
                 </div>
                 <div *ngIf="loading" class="opts">
                     <button mat-button class="op" *ngIf="options[2]"
-                        onclick="opcionClick(options[2])">{{options[2]}}</button>
+                        onclick="opcionClick(options[2])">•{{options[2]}}</button>
                 </div>
                 <div *ngIf="loading" class="opts">
                     <button mat-button class="op" *ngIf="options[3]"
-                        onclick="opcionClick(options[3])">{{options[3]}}</button>
+                        onclick="opcionClick(options[3])">•{{options[3]}}</button>
                 </div>
                 <mat-form-field class="udx" appearance="fill">
                     <input matInput class="inpx" type="text" [(ngModel)]="contextReq.description">
